# ideeza-analytics-assessment

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: pre-commit.yml
analytics/: models.py  serializers.py  signals.py  urls.py  views.py
analytics/management/commands/: seed_data.py
analytics/migrations/: 0001_initial.py
core/: urls.py
core/settings/: __init__.py  common.py  dev.py  prd.py  stg.py
utils/: parse_filters.py
