[project]
name = "ideeza-analytics-assessment"
version = "0.1.0"
description = "IDEEZA - Senior Backend Developer Assessment."
authors = [
    {name = "Hailemichael Atrsaw (Michael)",email = "hailemichael.atrsaw@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.6,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "django-filter (>=25.2,<26.0)",
    "django-extensions (>=4.1,<5.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "dj-database-url (>=3.1.2,<4.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "gunicorn (>=26.0.0,<27.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
